--- a/.github/workflows/1_2_c_promote_patch_to_stable.yml
+++ b/.github/workflows/1_2_c_promote_patch_to_stable.yml
@@ -54,6 +54,9 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           inputs: '{ "npm_channel": "latest", "extension_version": "${{ steps.update.outputs.next_extension_version }}", "branch": "stable", "trigger_reason": "On manual trigger promoting patch branch to stable." }'
 
+      - name: 'Set current job url in SLACK_FOOTER env var'
+        run: echo "SLACK_FOOTER=<$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID|Click here to go to the job logs>" >> $GITHUB_ENV
+
       - name: Slack Notification on Failure
         if: ${{ failure() }}
         uses: rtCamp/action-slack-notify@v2.2.0
