--- a/.github/workflows/3_LSP_unit_tests_publish.yml
+++ b/.github/workflows/3_LSP_unit_tests_publish.yml
@@ -85,6 +85,9 @@ jobs:
     env:
       SLACK_MESSAGE: '${{ needs.build.outputs.tag_name }} - ${{github.event.inputs.trigger_reason}} '
     steps:
+      - name: 'Set current job url in SLACK_FOOTER env var'
+        run: echo "SLACK_FOOTER=<$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID|Click here to go to the job logs>" >> $GITHUB_ENV
+
       - name: Slack Notification on Failure
         if: ${{ failure() || needs.tests.result == 'failure' || needs.bump.result == 'failure' }}
         uses: rtCamp/action-slack-notify@v2.2.0
