--- a/.github/workflows/6_build.yml
+++ b/.github/workflows/6_build.yml
@@ -100,6 +100,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.inputs.branch }}
+
+      - name: 'Set current job url in SLACK_FOOTER env var'
+        run: echo "SLACK_FOOTER=<$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID|Click here to go to the job logs>" >> $GITHUB_ENV
+
       - name: Slack Notification on Failure
         if: ${{ failure() || needs.build.result == 'failure' }}
         uses: rtCamp/action-slack-notify@v2.2.0
