Update nixpkgs when publishing a new version

--- a/.github/workflows/7_publish.yml
+++ b/.github/workflows/7_publish.yml
@@ -54,6 +54,13 @@ jobs:
       - name: publish vsix to marketplace
         run: cd packages/vscode && ./node_modules/.bin/vsce publish --pat ${{ secrets.AZURE_DEVOPS_PERSONAL_ACCESS_TOKEN}} --packagePath ${{github.workspace}}/${{ github.event.inputs.asset_name }}
 
+      - name: Workflow dispatch to pimeeys/nixos-prisma for version update
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: Build and publish packages
+          repo: pimeys/nixos-prisma
+          token: ${{ secrets.GH_TOKEN }}
+
       - name: 'Set current job url in SLACK_FOOTER env var'
         run: echo "SLACK_FOOTER=<$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID|Click here to go to the job logs>" >> $GITHUB_ENV
 
