--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@prisma/prisma-fmt-wasm": "3.9.0-30.45750a9211fc7b54738fe5a930f725b1dceaffb1",
     "@types/js-levenshtein": "1.1.1",
+    "chokidar": "3.5.3",
     "js-levenshtein": "1.1.6",
     "klona": "2.0.5",
     "vscode-languageserver": "7.0.0",
