chore: upgrade and test

--- a/packages/language-server/tsconfig.json
+++ b/packages/language-server/tsconfig.json
@@ -13,5 +13,5 @@
     "composite": true
   },
   "include": ["src/**/*", "src/**/*.json"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".vscode-test"]
 }
