--- a/package.json
+++ b/package.json
@@ -42,22 +42,18 @@
     "test": "sh scripts/e2e.sh",
     "test:e2e": "sh scripts/e2eTestsOnVsix/test.sh",
     "testScripts": "jest __tests__",
-    "test:bump": "sh scripts/e2eTestsOnVsix/bump_version.sh"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "test:bump": "sh scripts/e2eTestsOnVsix/bump_version.sh",
+    "prepare": "husky install"
   },
   "publishConfig": {
     "access": "public"
   },
   "lint-staged": {
-    "packages/**/*.{js,ts,css,json,md}": [
+    "*.{js,ts,css,json,md,yml}": [
       "prettier --write",
       "git add"
     ],
-    "packages/**/*.{js,ts}": [
+    "*.{js,ts}": [
       "eslint --fix"
     ]
   }
