--- a/.github/workflows/6_build.yml
+++ b/.github/workflows/6_build.yml
@@ -102,6 +102,7 @@ jobs:
           ref: ${{ github.event.inputs.branch }}
 
       - name: 'Set current job url in SLACK_FOOTER env var'
+        if: ${{ always() }}
         run: echo "SLACK_FOOTER=<$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID|Click here to go to the job logs>" >> $GITHUB_ENV
 
       - name: Slack Notification on Failure
