--- a/.github/workflows/4_bump_LSP_in_extension.yml
+++ b/.github/workflows/4_bump_LSP_in_extension.yml
@@ -70,6 +70,7 @@ jobs:
           inputs: '{ "npm_channel": "${{ github.event.inputs.npm_channel }}", "extension_version": "${{ github.event.inputs.extension_version }}", "branch": "${{ github.event.inputs.branch }}", "trigger_reason": "${{github.event.inputs.trigger_reason}}" }'
 
       - name: 'Set current job url in SLACK_FOOTER env var'
+        if: ${{ failure() }}
         run: echo "SLACK_FOOTER=<$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID|Click here to go to the job logs>" >> $GITHUB_ENV
 
       - name: Slack Notification on Failure
