--- a/.github/workflows/5_e2e_tests.yml
+++ b/.github/workflows/5_e2e_tests.yml
@@ -1,4 +1,4 @@
-name: 5. Integration tests in VSCode folder with published LSP
+name: 5. Integration tests in VSCode folder with published LS
 
 on:
   workflow_dispatch:
@@ -22,7 +22,7 @@ env:
 
 jobs:
   tests:
-    name: Integration tests in VSCode folder with published LSP
+    name: Integration tests in VSCode folder with published LS
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -77,7 +77,7 @@ jobs:
         if: ${{ failure() || needs.tests.result == 'failure' }}
         uses: rtCamp/action-slack-notify@v2.2.0
         env:
-          SLACK_TITLE: '5. Integration tests in VSCode folder with published LSP failed :x:'
+          SLACK_TITLE: '5. Integration tests in VSCode folder with published LS failed :x:'
           SLACK_COLOR: '#FF0000'
           SLACK_MESSAGE: '${{github.event.inputs.extension_version}} - ${{github.event.inputs.trigger_reason}} '
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_FAILURES }}
