--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1.6
         with:
-          run: npm test "useLocalLSP"
+          run: npm test "useLocalLS"
       - name: Catch shell script issues
         if: matrix.os == 'ubuntu-latest'
         run: npm run shell:lint
