--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prisma/language-server",
-  "description": "Implementation of a language server in Node.",
+  "description": "Prisma Language Server",
   "displayName": "Prisma Language Server",
   "version": "31.0.743",
   "author": "Prisma",
@@ -16,7 +16,11 @@
   "bin": {
     "prisma-language-server": "dist/src/bin.js"
   },
-  "repository": "git@github.com:prisma/language-tools.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/prisma/language-tools.git",
+    "directory": "packages/language-server"
+  },
   "scripts": {
     "build": "tsc",
     "watch": "npm run build -- -w",
