--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "references": [
-    { "path": "./packages/vscode" },
-    { "path": "./packages/language-server" }
+    {
+      "path": "./packages/vscode"
+    },
+    {
+      "path": "./packages/language-server"
+    }
   ],
   "exclude": ["**/node_modules", ".vscode-test"],
   "files": [],
