--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -1,8 +1,8 @@
 {
   "name": "prisma-insider",
   "displayName": "Prisma - Insider",
-  "description": "Insider Build of the Prisma VS Code extension (only use it if you are also using the dev version of the CLI).",
-  "version": "31.0.744",
+  "description": "This is the Insider Build of the Prisma VSCode extension (only use it if you are also using the dev version of the CLI).",
+  "version": "31.0.745",
   "license": "Apache-2.0",
   "icon": "logo_white.png",
   "engines": {
