--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "semver": "7.3.5",
     "typescript": "4.6.2",
     "vsce": "2.7.0",
-    "vscode-test": "1.6.1"
+    "@vscode/test-electron": "1.6.1"
   },
   "scripts": {
     "build": "tsc -b",
