--- a/.github/workflows/3_LS_unit_tests_publish.yml
+++ b/.github/workflows/3_LS_unit_tests_publish.yml
@@ -1,4 +1,4 @@
-name: 4. Bump LS in VSCode extension
+name: 3. Unit tests for LS and publish
 
 on:
   workflow_dispatch:
@@ -17,13 +17,33 @@ on:
         required: true
 
 env:
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
-  ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
-  PRISMA_TELEMETRY_INFORMATION: 'language-tools 4_bump_LSP_in_extension.yml'
+  PRISMA_TELEMETRY_INFORMATION: 'language-tools 3_LS_unit_tests_publish.yml'
 
 jobs:
+  tests:
+    name: Run unit tests
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.inputs.branch }}
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - name: Install Dependencies in Language Server
+        run: cd packages/language-server && npm install
+      - name: Build Language Server
+        run: cd packages/language-server && npm run build
+      - name: Run Language Server tests
+        run: cd packages/language-server && npm test
+
   bump:
-    name: Bump LS in VSCode extension
+    name: Bump Language Server version
+    needs: [tests]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -33,51 +53,47 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+          # Setup .npmrc file to publish to npm
+          registry-url: 'https://registry.npmjs.org'
       - name: Print inputs
         run: |
           echo ${{github.event.inputs.npm_channel}}
           echo ${{github.event.inputs.extension_version}}
           echo ${{github.event.inputs.branch}}
           echo ${{github.event.inputs.trigger_reason}}
-      - name: Install Dependencies
-        run: npm install
-      - name: Bump LS version in extension
-        run: |
-          node scripts/update_package_json_files.js ${{ github.event.inputs.extension_version }}
-      - name: Install Dependencies
-        run: npm install
-      - name: Setup Git
-        run: |
-          sh scripts/set_git_credentials.sh
+      - name: Install Dependencies in Language Server
+        run: cd packages/language-server && npm install
+      - name: Build Language Server
+        run: cd packages/language-server && npm run build
+      - name: Publish Language Server to npm
+        run: cd packages/language-server && npm publish --tag ${{ github.event.inputs.npm_channel }} --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Read package.json versions (enginesVersion) for the commit message
-        id: packagejson
-        run: |
-          PACKAGE_JSON_PATH="./packages/language-server/package.json"
-          echo $PACKAGE_JSON_PATH
-          ENGINES_VERSION=$(jq -r '.prisma.enginesVersion' ${PACKAGE_JSON_PATH}) 
-          echo "::set-output name=engines::$ENGINES_VERSION"
-
-      - name: Commit and push to branch
-        run: |
-          sh scripts/commit_and_push.sh "Bump LS to ${{ github.event.inputs.extension_version }} in VSCode. Engines: ${{ steps.packagejson.outputs.engines }}"
-
-      - name: Trigger next workflow for VSCode e2e tests
+      - name: Trigger next workflow for bumping Language Server in extension
         uses: benc-uk/workflow-dispatch@v1
         with:
-          workflow: 5. Integration tests in VSCode folder with published LS
+          workflow: 4. Bump LS in VSCode extension
           token: ${{ secrets.GH_TOKEN }}
           inputs: '{ "npm_channel": "${{ github.event.inputs.npm_channel }}", "extension_version": "${{ github.event.inputs.extension_version }}", "branch": "${{ github.event.inputs.branch }}", "trigger_reason": "${{github.event.inputs.trigger_reason}}" }'
 
+  slack:
+    name: Send slack notification
+    runs-on: ubuntu-latest
+    needs: [tests, bump]
+    if: always()
+    env:
+      SLACK_MESSAGE: '${{ needs.build.outputs.tag_name }} - ${{github.event.inputs.trigger_reason}} '
+    steps:
       - name: 'Set current job url in SLACK_FOOTER env var'
-        if: ${{ failure() }}
+        if: ${{ always() }}
         run: echo "SLACK_FOOTER=<$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID|Click here to go to the job logs>" >> $GITHUB_ENV
 
       - name: Slack Notification on Failure
-        if: ${{ failure() }}
+        if: ${{ failure() || needs.tests.result == 'failure' || needs.bump.result == 'failure' }}
         uses: rtCamp/action-slack-notify@v2.2.0
         env:
-          SLACK_TITLE: '4. Bumping LS in VSCode extension failed :x:'
+          SLACK_TITLE: '3. Unit tests for LS and publish failed :x:'
           SLACK_COLOR: '#FF0000'
           SLACK_MESSAGE: '${{github.event.inputs.extension_version}} - ${{github.event.inputs.trigger_reason}} '
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_FAILURES }}
