--- a/.github/workflows/1_2_c_promote_patch_to_stable.yml
+++ b/.github/workflows/1_2_c_promote_patch_to_stable.yml
@@ -47,10 +47,10 @@ jobs:
         run: |
           sh scripts/commit_and_push.sh "bump extension version in package.json to ${{ steps.update.outputs.next_extension_version }}."
 
-      - name: Trigger next workflow for LS Unit tests
+      - name: Trigger next workflow for Language Server tests
         uses: benc-uk/workflow-dispatch@v1
         with:
-          workflow: 3. Unit tests for LS and publish
+          workflow: 3. Test Language Server and publish
           token: ${{ secrets.GH_TOKEN }}
           inputs: '{ "npm_channel": "latest", "extension_version": "${{ steps.update.outputs.next_extension_version }}", "branch": "stable", "trigger_reason": "On manual trigger promoting patch branch to stable." }'
 
