feat(syntax): Register the markdown syntax.
This commit registers the created markdown syntax in `grammars` so that
the highlighting can be seen in markdown files.

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -69,6 +69,16 @@
         "embeddedLanguages": {
           "meta.embedded.block.prisma": "prisma"
         }
+      },
+      {
+        "scopeName": "markdown.prisma.codeblock",
+        "path": "./syntaxes/prisma.markdown.json",
+        "injectTo": [
+          "text.html.markdown"
+        ],
+        "embeddedLanguages": {
+          "meta.embedded.block.prisma": "prisma"
+        }
       }
     ],
     "configuration": {
