--- a/packages/vscode/tsconfig.json
+++ b/packages/vscode/tsconfig.json
@@ -2,16 +2,15 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "noUnusedLocals": true,
-    "target": "es6",
+    "target": "es2018",
+    "lib": ["es2018"],
     "outDir": "dist",
-    "lib": ["es6"],
+    "noUnusedLocals": true,
     "sourceMap": true,
     "esModuleInterop": true,
     "strict": true,
     "composite": true,
     "declaration": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", ".vscode-test"]
+  "include": ["src/**/*"]
 }
