--- a/.github/workflows/2_bump_versions.yml
+++ b/.github/workflows/2_bump_versions.yml
@@ -20,12 +20,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v2.2.1
         with:
+          version: latest
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'pnpm'
           node-version: '16'
       - name: Install Dependencies
-        run: npm install
+        run: pnpm install
       - name: Setup Git
         run: |
           sh scripts/set_git_credentials.sh
@@ -61,7 +64,7 @@ jobs:
         run: |
           node scripts/update_package_json_files.js ${{ github.event.inputs.npm_channel }} ${{ steps.update.outputs.next_extension_version }} ${{ github.event.inputs.version }}
       - name: Install Dependencies to update lock file
-        run: npm install
+        run: pnpm install
       - name: Push to branch
         run: |
           sh scripts/commit_and_push.sh "bump extension version to ${{ steps.update.outputs.next_extension_version }} in package.json" ${{ steps.setup_branch.outputs.branch}} ${{ steps.setup_branch.outputs.new_branch }}
