--- a/.github/workflows/6_build.yml
+++ b/.github/workflows/6_build.yml
@@ -34,9 +34,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v2.2.1
         with:
+          version: latest
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'pnpm'
           node-version: '16'
       - name: Print inputs
         run: |
@@ -47,13 +50,13 @@ jobs:
 
       # Build the extension
       - name: Install Dependencies
-        run: npm install
-      - name: Compile
-        run: npm run compile
+        run: pnpm install
+      - name: Build all packages
+        run: pnpm -r run build
       - name: Replace Readme for marketplace
         run: node scripts/change_readme.js ${{ github.event.inputs.npm_channel }}
       - name: Build vsix
-        run: cd packages/vscode && npm run package
+        run: pnpm --filter "vscode" package
 
       # Create GitHub Release and upload built result as asset
       - name: Get git tag and asset name
