--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -21,35 +21,26 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v2.2.1
         with:
+          version: latest
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'pnpm'
           node-version: '16'
-      - name: Cache node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
       - name: Install Dependencies
-        run: npm install
-      - name: Compile
-        run: npm run compile
+        run: pnpm install
+      - name: Build all packages
+        run: pnpm -r run build
       - name: Run Language Server tests
-        run: cd packages/language-server && npm test
+        run: pnpm --filter "@prisma/language-server" run test
       - name: Run VS Code extension tests in headless mode
         uses: GabrielBB/xvfb-action@v1.6
         with:
-          run: npm test "useLocalLS"
+          run: pnpm test "useLocalLS"
       - name: Catch shell script issues
         if: matrix.os == 'ubuntu-latest'
-        run: npm run shell:lint
+        run: pnpm run shell:lint
       - name: Catch version incompatibilities
         if: matrix.os == 'ubuntu-latest'
-        run: npm run testScripts
+        run: pnpm run testScripts
