--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
-/.direnv
+# Logs
+logs
+*.log
+npm-debug.log*
 
+# Coverage directory used by tools like istanbul
+coverage
+
+# Dependency directory
+**/node_modules/**
+
+# Others
+/.direnv
 dist/
-node_modules/
 .envrc
 .vscode-test
-dist
 *.vsix
 **/*.DS_Store
 *.exe
+.pnpm-store
