--- a/packages/language-server/tsconfig.json
+++ b/packages/language-server/tsconfig.json
@@ -2,16 +2,15 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
+    "target": "es2018",
+    "lib": ["es2018"],
     "outDir": "dist",
     "noUnusedLocals": true,
-    "lib": ["es6"],
     "sourceMap": true,
     "esModuleInterop": true,
     "strict": true,
-    "resolveJsonModule": true,
-    "composite": true
+    "composite": true,
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*", "src/**/*.json"],
-  "exclude": ["node_modules", ".vscode-test"]
+  "include": ["src/**/*", "src/completion/completions.json"]
 }
