--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -129,6 +129,7 @@
     "@types/mocha": "9.1.0",
     "@types/vscode": "1.52.0",
     "@vscode/test-electron": "1.6.2",
+    "glob": "7.2.0",
     "mocha": "9.2.2",
     "ovsx": "0.3.0",
     "typescript": "4.6.2",
