--- a/.github/workflows/1_2_b_bump_extension_only.yml
+++ b/.github/workflows/1_2_b_bump_extension_only.yml
@@ -1,6 +1,9 @@
 name: 1/2b. Bump versions for extension only (on push to main and patch branch)
 
-# This workflow covers both '1_check_for_updates' and '2_bump_versions' workflows, therefore it is another variant of the same, but specifically for extension only, without any Prisma CLI updates that would need to be handled.
+# This workflow covers both '1_check_for_updates' and '2_bump_versions' workflows,
+# therefore it is another variant of the same,
+# but specifically for extension only,
+# without any Prisma CLI updates that would need to be handled.
 
 on:
   push:
