ci: fix step 4 with --no-frozen-lockfile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,5 @@
 {
-  "references": [
-    {
-      "path": "./packages/vscode"
-    },
-    {
-      "path": "./packages/language-server"
-    }
-  ],
+  "extends": "./tsconfig.build.json",
   "include": ["**/*", ".eslintrc.js"],
   "exclude": ["**/node_modules"]
 }
