Revert "ci: "vscode:prepublish": "pnpm -r run build""
This reverts commit 0b2a5e08b4285cda89d944981b9a1e5d4eae16a1.

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -31,7 +31,7 @@
     "build:clean": "tsc --build --clean",
     "watch": "pnpm run build -- -w",
     "test": "rm -rf ./dist && pnpm run build && node dist/src/__test__/runTest true",
-    "vscode:prepublish": "pnpm -r run build",
+    "vscode:prepublish": "pnpm -r run build:clean",
     "package": "vsce package"
   },
   "main": "./dist/src/extension.js",
