Revert "ci: fix step 6"
This reverts commit 0556c5858b3d130369d020f98ad1e37f6f2a505e.

--- a/.github/workflows/6_build.yml
+++ b/.github/workflows/6_build.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Replace Readme for marketplace
         run: node scripts/change_readme.js ${{ github.event.inputs.npm_channel }}
       - name: Build vsix
-        run: pnpm --filter "prisma-insider" package
+        run: pnpm --filter "vscode" package
 
       # Create GitHub Release and upload built result as asset
       - name: Get git tag and asset name
