Revert "ci: fix step 4 with --no-frozen-lockfile"
This reverts commit a60f5a842b54509a1abb108164c213b8c139a8ca.

--- a/.github/workflows/4_bump_LS_in_extension.yml
+++ b/.github/workflows/4_bump_LS_in_extension.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           node scripts/update_package_json_files.js ${{ github.event.inputs.extension_version }}
       - name: Install Dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install
       - name: Setup Git
         run: |
           sh scripts/set_git_credentials.sh
