--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
-  "extends": "./tsconfig.build.json",
+  "references": [
+    {
+      "path": "./packages/vscode"
+    },
+    {
+      "path": "./packages/language-server"
+    }
+  ],
   "include": ["**/*", ".eslintrc.js"],
   "exclude": ["**/node_modules"]
 }
