--- a/.github/workflows/1_2_b_bump_extension_only.yml
+++ b/.github/workflows/1_2_b_bump_extension_only.yml
@@ -22,13 +22,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2.2.1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'pnpm'
           node-version: '16'
+      - name: Install Dependencies
+        run: npm install
       - name: Extract branch name # needed because github.ref will contain sth like refs/heads/2.6.x, so pushing to that will fail
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
@@ -53,7 +52,7 @@ jobs:
         run: |
           node scripts/update_package_json_files.js dev ${{ steps.update.outputs.next_extension_version }} ""
       - name: Install Dependencies
-        run: pnpm install
+        run: npm install
       - name: Commit and Push
         run: |
           sh scripts/commit_and_push.sh "bump extension version in package.json to ${{ steps.update.outputs.next_extension_version }}." ${{ steps.setup_branch.outputs.new_branch }}
