--- a/.github/workflows/1_check_for_updates.yml
+++ b/.github/workflows/1_check_for_updates.yml
@@ -16,15 +16,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2.2.1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'pnpm'
           node-version: '16'
       - name: Install Dependencies
-        run: pnpm install
+        run: npm install
 
       # First it runs this
       - name: Check for Prisma CLI update
