--- a/.github/workflows/3_LS_tests_publish.yml
+++ b/.github/workflows/3_LS_tests_publish.yml
@@ -30,19 +30,16 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}
-      - uses: pnpm/action-setup@v2.2.1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'pnpm'
           node-version: '16'
-      - name: Install Dependencies
-        run: pnpm install
+      - name: Install Dependencies in Language Server
+        run: cd packages/language-server && npm install
       - name: Build Language Server
-        run: pnpm --filter "@prisma/language-server" run build
+        run: cd packages/language-server && npm run build
       - name: Run Language Server tests
-        run: pnpm --filter "@prisma/language-server" run test
+        run: cd packages/language-server && npm test
 
   bump:
     name: Bump Language Server version
@@ -52,12 +49,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}
-      - uses: pnpm/action-setup@v2.2.1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'pnpm'
           node-version: '16'
           # Setup .npmrc file to publish to npm
           registry-url: 'https://registry.npmjs.org'
@@ -67,12 +61,12 @@ jobs:
           echo ${{github.event.inputs.extension_version}}
           echo ${{github.event.inputs.branch}}
           echo ${{github.event.inputs.trigger_reason}}
-      - name: Install Dependencies
-        run: pnpm install
+      - name: Install Dependencies in Language Server
+        run: cd packages/language-server && npm install
       - name: Build Language Server
-        run: pnpm --filter "@prisma/language-server" run build
+        run: cd packages/language-server && npm run build
       - name: Publish Language Server to npm
-        run: pnpm --filter "@prisma/language-server" publish --tag ${{ github.event.inputs.npm_channel }} --access public
+        run: cd packages/language-server && npm publish --tag ${{ github.event.inputs.npm_channel }} --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
