--- a/.github/workflows/4_bump_LS_in_extension.yml
+++ b/.github/workflows/4_bump_LS_in_extension.yml
@@ -29,12 +29,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}
-      - uses: pnpm/action-setup@v2.2.1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'pnpm'
           node-version: '16'
       - name: Print inputs
         run: |
@@ -43,12 +40,12 @@ jobs:
           echo ${{github.event.inputs.branch}}
           echo ${{github.event.inputs.trigger_reason}}
       - name: Install Dependencies
-        run: pnpm install
+        run: npm install
       - name: Bump LS version in extension
         run: |
           node scripts/update_package_json_files.js ${{ github.event.inputs.extension_version }}
       - name: Install Dependencies
-        run: pnpm install
+        run: npm install
       - name: Setup Git
         run: |
           sh scripts/set_git_credentials.sh
