--- a/.github/workflows/5_e2e_tests.yml
+++ b/.github/workflows/5_e2e_tests.yml
@@ -31,21 +31,18 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}
-      - uses: pnpm/action-setup@v2.2.1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'pnpm'
           node-version: '16'
       - name: Install Dependencies
-        run: pnpm install
-      - name: Build all packages
-        run: pnpm -r run build
+        run: npm install
+      - name: Compile
+        run: npm run compile
       - name: Headless e2e tests
         uses: GabrielBB/xvfb-action@v1.6
         with:
-          run: pnpm run test
+          run: npm run test
 
   trigger:
     name: Trigger next workflow
@@ -53,6 +50,11 @@ jobs:
     runs-on: ubuntu-latest
     if: always()
     steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
       - name: Print inputs
         run: |
           echo ${{github.event.inputs.npm_channel}}
