--- a/.github/workflows/6_build.yml
+++ b/.github/workflows/6_build.yml
@@ -34,12 +34,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}
-      - uses: pnpm/action-setup@v2.2.1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'pnpm'
           node-version: '16'
       - name: Print inputs
         run: |
@@ -50,13 +47,13 @@ jobs:
 
       # Build the extension
       - name: Install Dependencies
-        run: pnpm install
-      - name: Build all packages
-        run: pnpm -r run build
+        run: npm install
+      - name: Compile
+        run: npm run compile
       - name: Replace Readme for marketplace
         run: node scripts/change_readme.js ${{ github.event.inputs.npm_channel }}
       - name: Build vsix
-        run: pnpm --filter "vscode" package
+        run: cd packages/vscode && npm run package
 
       # Create GitHub Release and upload built result as asset
       - name: Get git tag and asset name
