--- a/.github/workflows/7_publish.yml
+++ b/.github/workflows/7_publish.yml
@@ -31,12 +31,9 @@ jobs:
       SLACK_MESSAGE: '${{ github.event.inputs.tag_name }} - ${{github.event.inputs.trigger_reason}}'
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2.2.1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'pnpm'
           node-version: '16'
       - name: Print inputs
         run: |
@@ -44,7 +41,7 @@ jobs:
           echo ${{github.event.inputs.tag_name}}
           echo ${{github.event.inputs.trigger_reason}}
       - name: Install Dependencies
-        run: pnpm install
+        run: npm install
 
       # Download Asset from GH release and publish to VSCode marketplace
       - uses: dsaltares/fetch-gh-release-asset@master
@@ -86,18 +83,15 @@ jobs:
       SLACK_MESSAGE: '${{ github.event.inputs.tag_name }} - ${{github.event.inputs.trigger_reason}}'
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2.2.1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'pnpm'
           node-version: '16'
       - name: Print inputs
         run: |
           echo ${{github.event.inputs.trigger_reason}}
       - name: Install Dependencies
-        run: pnpm install
+        run: npm install
 
       # Download Asset from GH release and publish to open-vsx
       - uses: dsaltares/fetch-gh-release-asset@master
