--- a/.github/workflows/e2e_published_vsix.yml
+++ b/.github/workflows/e2e_published_vsix.yml
@@ -28,15 +28,12 @@ jobs:
       installed-extension: ${{ steps.install.outputs.installed-extension }}
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2.2.1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
-      - uses: actions/setup-node@v3
-        with:
-          cache: 'pnpm'
           node-version: '16'
       - name: Install Dependencies
-        run: pnpm install
+        run: npm install
       - name: Install extension via CLI
         id: install
         run: |
@@ -45,7 +42,7 @@ jobs:
         if: ${{ steps.install.outputs.installed-extension }}
         uses: GabrielBB/xvfb-action@v1.6
         with:
-          run: pnpm run test:e2e ${{ github.event.inputs.extension_type }} ${{ matrix.os }} ${{ github.event.inputs.extension_version }}
+          run: npm run test:e2e ${{ github.event.inputs.extension_type }} ${{ matrix.os }} ${{ github.event.inputs.extension_version }}
 
   after-test:
     name: Bump tested version and commit # scripts/versions/tested_extension_stable & tested_extension_insider
@@ -58,7 +55,7 @@ jobs:
         run: echo ${{ needs.test.outputs.installed-extension }}
       - name: Bump version
         if: ${{needs.test.result == 'success' && needs.test.outputs.installed-extension }}
-        run: pnpm run test:bump ${{ github.event.inputs.extension_type }} ${{ github.event.inputs.extension_version }}
+        run: npm run test:bump ${{ github.event.inputs.extension_type }} ${{ github.event.inputs.extension_version }}
 
       - name: 'Set current job url in SLACK_FOOTER env var'
         if: ${{ always() }}
