--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -25,24 +25,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - name: Cache node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+          cache: 'npm'
       - name: Install Dependencies
         run: npm install
-      - name: Compile
+      - name: Build all packages
         run: npm run compile
       - name: Run Language Server tests
-        run: cd packages/language-server && npm test
+        run: npm run test --workspace @prisma/language-server
       - name: Run VS Code extension tests in headless mode
         uses: GabrielBB/xvfb-action@v1.6
         with:
