ci: use npm cache

--- a/.github/workflows/1_2_b_bump_extension_only.yml
+++ b/.github/workflows/1_2_b_bump_extension_only.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+          cache: 'npm'
       - name: Install Dependencies
         run: npm install
       - name: Extract branch name # needed because github.ref will contain sth like refs/heads/2.6.x, so pushing to that will fail
