--- a/.github/workflows/1_check_for_updates.yml
+++ b/.github/workflows/1_check_for_updates.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+          cache: 'npm'
       - name: Install Dependencies
         run: npm install
 
