--- a/.github/workflows/3_LS_tests_publish.yml
+++ b/.github/workflows/3_LS_tests_publish.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+          cache: 'npm'
       - name: Install Dependencies
         run: npm install
       - name: Build Language Server
@@ -53,6 +54,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+          cache: 'npm'
           # Setup .npmrc file to publish to npm
           registry-url: 'https://registry.npmjs.org'
       - name: Print inputs
